undo: spacing causing issue

--- a/src/main.scss
+++ b/src/main.scss
@@ -5483,7 +5483,7 @@ m--tree {
   background: rgba(0, 0, 0, 0.05); }
 
 m-body {
-  padding-top: 60px;
+  margin-top: 60px;
   display: block;
   min-height: 100%; }
   @media only screen and (max-width: 600px) {
